--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "ts": "vue-tsc --noEmit",
     "format": "prettier --write \"src/**/*.{html,vue,ts,js,cjs,mjs}\"",
     "lint": "eslint src --fix --ext .ts,.tsx,.vue,.js,.jsx --max-warnings 0",
-    "prepare": "husky",
+    "prepare": "husky install",
     "lint-staged": "lint-staged"
   },
   "dependencies": {
@@ -27,7 +27,7 @@
     "lucide-vue-next": "^0.513.0",
     "mitt": "^3.0.1",
     "pinia": "^3.0.2",
-    "reka-ui": "^2.3.0",
+    "reka-ui": "^2.3.1",
     "tailwind-merge": "^3.3.0",
     "tw-animate-css": "^1.3.4",
     "vue": "^3.5.16",
@@ -35,6 +35,8 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
     "@eslint/js": "^9.28.0",
     "@tailwindcss/vite": "^4.1.8",
     "@types/node": "^22.15.29",
@@ -61,7 +63,14 @@
     "vite-plugin-json5": "^1.1.9",
     "vue-tsc": "^2.2.8"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "lint-staged": {
-    "**/*": "prettier --write --ignore-unknown"
+    "*.{html,vue,ts,js,cjs,mjs}": [
+      "prettier --write"
+    ]
   }
 }
