--- a/.env
+++ b/.env
@@ -2,10 +2,10 @@
 VITE_SERVER_PORT=6789
 
 # 请求地址
-VITE_PROXY_URL=/api
+VITE_BASE_URL=/api
 
 # 代理地址
-VITE_BASE_URL=http://localhost:8080
+VITE_PROXY_URL=https://example.com
 
 # 首选项语言
 VITE_APP_LOCALE=zh
