--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,9 @@ dist-ssr
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
+!.vscode/settings.json
 .idea
+.trae
 .DS_Store
 *.suo
 *.ntvs*
