--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:test": "vite build --mode test",
     "build:preview": "vite build --mode preview",
     "build": "vite build --mode prod",
-    "preview": "vite preview",
+    "preview": "vite preview --mode prod",
     "ts": "vue-tsc --noEmit",
     "format": "prettier --write \"src/**/*.{html,vue,ts,js,cjs,mjs}\"",
     "lint": "eslint src --fix --ext .ts,.tsx,.vue,.js,.jsx --max-warnings 0",
@@ -17,6 +17,7 @@
     "lint-staged": "lint-staged"
   },
   "dependencies": {
+    "@vee-validate/zod": "^4.15.1",
     "@vueuse/core": "^13.3.0",
     "axios": "^1.9.0",
     "axios-retry": "^4.5.0",
@@ -26,13 +27,18 @@
     "element-plus": "^2.10.2",
     "lucide-vue-next": "^0.513.0",
     "mitt": "^3.0.1",
+    "nprogress": "^0.2.0",
     "pinia": "^3.0.2",
     "reka-ui": "^2.3.1",
-    "tailwind-merge": "^3.3.0",
+    "shadcn-vue": "^2.2.0",
+    "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.3.4",
+    "vee-validate": "^4.15.1",
     "vue": "^3.5.16",
     "vue-i18n": "^11.1.5",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue-sonner": "^2.0.0",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
@@ -40,6 +46,7 @@
     "@eslint/js": "^9.28.0",
     "@tailwindcss/vite": "^4.1.8",
     "@types/node": "^22.15.29",
+    "@types/nprogress": "^0.2.3",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/compiler-sfc": "^3.5.16",
     "@vue/tsconfig": "^0.7.0",
@@ -55,6 +62,7 @@
     "prettier": "^3.5.3",
     "sass": "^1.89.1",
     "tailwindcss": "^4.1.8",
+    "terser": "^5.43.1",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.33.1",
     "unplugin-auto-import": "^19.3.0",
