--- a/package.json
+++ b/package.json
@@ -60,6 +60,9 @@
     "lint-staged": "^16.1.0",
     "postcss": "^8.5.4",
     "prettier": "^3.5.3",
+    "prettier-plugin-css-order": "^2.1.2",
+    "prettier-plugin-sort-imports": "^1.8.8",
+    "prettier-plugin-tailwindcss": "^0.6.13",
     "sass": "^1.89.1",
     "tailwindcss": "^4.1.8",
     "terser": "^5.43.1",
