feat: 修改 tsconfig.json，增加明/暗主题切换功能

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "element-plus": "^2.10.2",
+    "ky": "^1.8.1",
     "lucide-vue-next": "^0.513.0",
     "mitt": "^3.0.1",
     "nprogress": "^0.2.0",
@@ -44,6 +45,8 @@
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@eslint/js": "^9.28.0",
+    "@iconify-json/radix-icons": "^1.2.2",
+    "@iconify/vue": "^5.0.0",
     "@tailwindcss/vite": "^4.1.8",
     "@types/node": "^22.15.29",
     "@types/nprogress": "^0.2.3",
