--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "build": "vite build --mode prod",
     "preview": "vite preview --mode prod",
     "ts": "vue-tsc --noEmit",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage",
+    "test:watch": "vitest watch",
     "format": "prettier --write \"src/**/*.{html,vue,ts,js,cjs,mjs}\"",
     "lint": "eslint src --fix --ext .ts,.tsx,.vue,.js,.jsx --max-warnings 0",
     "prepare": "husky install",
@@ -50,8 +54,10 @@
     "@tailwindcss/vite": "^4.1.8",
     "@types/node": "^22.15.29",
     "@types/nprogress": "^0.2.3",
-    "@vitejs/plugin-vue": "^5.2.3",
+    "@vitejs/plugin-vue": "^6.0.0",
+    "@vitest/ui": "^3.2.4",
     "@vue/compiler-sfc": "^3.5.16",
+    "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.28.0",
@@ -60,6 +66,7 @@
     "eslint-plugin-vue": "^10.1.0",
     "globals": "^16.2.0",
     "husky": "^9.1.7",
+    "jsdom": "^26.1.0",
     "lint-staged": "^16.1.0",
     "postcss": "^8.5.4",
     "prettier": "^3.5.3",
@@ -73,8 +80,9 @@
     "typescript-eslint": "^8.33.1",
     "unplugin-auto-import": "^19.3.0",
     "unplugin-vue-components": "^28.7.0",
-    "vite": "npm:rolldown-vite@latest",
+    "vite": "npm:rolldown-vite@7.0.6",
     "vite-plugin-json5": "^1.1.9",
+    "vitest": "^3.2.4",
     "vue-tsc": "^2.2.8"
   },
   "husky": {
